--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,6 +1,26 @@
 
+- [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+
+---
+
+## 2019.08.03
+
+执行 PyInstaller:
+
+`python -O -m PyInstaller --onefile -y --windowed --clean playQT.py`
+
+`pyinstaller --onefile -y -w  playQT.py`
+
+
+upx, 压缩可执行文件, DLL 文件的工具, https://github.com/upx/upx
+
+PyInstaller 使用 upx:
+
+`python -O -m PyInstaller --onefile -y --windowed --clean --upx-dir /usr/local/bin playQT.py`
+
 
 
 ---
@@ -12,6 +32,23 @@ python gui:
 - wxPython, https://www.wxpython.org/
 
 `pip install wxPython`
+
+wxPython 教程, https://blog.csdn.net/xufive/article/details/82665460
+
+python 包, https://pypi.org/project/
+
+pyqt 教程:
+
+- http://zetcode.com/gui/pyqt5/
+- http://code.py40.com/1948.html
+
+
+pyinstaller, 打包工具, https://www.jianshu.com/p/71de89af1d27
+
+`pyuic5`, 将 qt 界面文件转换为代码的工具.
+
+https://www.riverbankcomputing.com/static/Docs/PyQt5/designer.html
+
 
 ---
 
