--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,7 +1,48 @@
 
+- [2019.08.04](#20190804)
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.04
+
+教程网站: http://zetcode.com/
+
+教程网站作者的 twitter: https://twitter.com/janbodnar
+
+关于时间的教程(pyqt5), http://zetcode.com/gui/pyqt5/datetime/
+
+UTC (Universal Coordinated time), a global time
+
+夏令时, Daylight saving time (DST)
+
+Unix epoch, 时间戳起始时间:
+
+> The Unix epoch is the time 00:00:00 UTC on 1 January 1970 (or 1970- 01-01T00:00:00Z ISO 8601)
+
+儒略日(Julian day, JD), 起始于公元前4713年1月1日中午12点.
+
+> The Julian day number 0 is assigned to the day starting at noon on January 1, 4713 BC
+
+转换为 JD 时间, 可以计算持续世纪的时间
+
+> With Julian day it is possible to do calculations that span centuries.
+
+JD 时间常用于天文学, 军事, 主机程序
+
+> Apart from astronomy, Julian dates are often used by military and mainframe programs.
+
+事件的主要成分:
+
+> In the event model, there are three participants:
+> - event source
+> - event object
+> - event target
+
+
+aria2 下载器, https://www.jianshu.com/p/bb9490ea1c4d
 
 
 ---
