--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,8 +1,26 @@
 
+- [2019.08.05](#20190805)
 - [2019.08.04](#20190804)
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.05
+
+pip 安装特定版本:
+
+`pip install pyqt5==5.12`, 这个版本在windows上用 PyInstaller 打包不会出错.
+
+pip 卸载:
+
+`pip uninstall pyqt5`
+
+
+【爬坑】python3+pyqt5+pyinstaller的各种问题, https://blog.csdn.net/weixin_34321977/article/details/89625680
+
+
 
 ---
 
