--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,9 +1,57 @@
 
+- [2019.08.07](#20190807)
 - [2019.08.05](#20190805)
 - [2019.08.04](#20190804)
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.07
+
+一种 cocos studio 项目资源目录结构 :
+
+- res
+  - game_XXX
+    - res_backup, 存放旧资源
+    - res_XXX
+      - 界面目录
+        - 散图
+    - sheet
+      - 合图
+    - ui
+      - ref文件, 摆放需要用代码创建的资源, 使得 cocos studio 可以导出这些资源.
+      - 界面
+    - ui_backup, 存放旧界面
+  - hall, 大厅
+    - res_backup
+    - res_hall
+      - 界面目录
+        - 散图
+    - sheet
+      - 合图
+    - ui
+      - 界面
+    - ui_backup
+  - mp3
+
+
+俄罗斯方块:
+
+> The Tetris game is one of the most popular computer games ever created. The original game was designed and programmed by a Russian programmer Alexey Pajitnov in 1985. Since then, Tetris is available on almost every computer platform in lots of variations.
+
+> Tetris is called a falling block puzzle game. In this game, we have seven different shapes called tetrominoes: an S-shape, a Z-shape, a T-shape, an L-shape, a Line-shape, a MirroredL-shape, and a Square-shape. Each of these shapes is formed with four squares. The shapes are falling down the board. The object of the Tetris game is to move and rotate the shapes so that they fit as much as possible. If we manage to form a row, the row is destroyed and we score. We play the Tetris game until we top out.
+
+制作电子游戏有助于提升编程能力.
+
+> Creating a computer game is a good way for enhancing programming skills.
+
+<br>
+
+tolua API 在 `tolua_map.c` 里.
+
+
 
 ---
 
