--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,10 +1,22 @@
 
+- [2019.08.08](#20190808)
 - [2019.08.07](#20190807)
 - [2019.08.05](#20190805)
 - [2019.08.04](#20190804)
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.08
+
+一个pyqt5教程, http://www.science.smith.edu/dftwiki/index.php/Category:PyQt5
+
+pyqt, 转换文本编码的类:
+
+> The QTextCodec class provides conversions between text encodings.
+
 
 ---
 
