--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -11,11 +11,42 @@
 
 ## 2019.08.08
 
-一个pyqt5教程, http://www.science.smith.edu/dftwiki/index.php/Category:PyQt5
+一个 pyqt5 教程, http://www.science.smith.edu/dftwiki/index.php/Category:PyQt5
 
 pyqt, 转换文本编码的类:
 
 > The QTextCodec class provides conversions between text encodings.
+
+<br>
+
+android studio 历史版本, https://developer.android.com/studio/archive
+
+android gradle plugin 版本 与 gradle 版本的对应关系: https://developer.android.com/studio/releases/gradle-plugin
+
+
+android gradle plugin 版本:
+
+```
+build.gradle:
+
+classpath 'com.android.tools.build:gradle:1.1.0'
+```
+
+gradle 版本:
+
+```
+gradle-wrapper.properties:
+
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.2-all.zip
+```
+
+NDK 下载, https://developer.android.com/ndk/downloads/?hl=zh-cn
+
+toolchains `mipsel-linux-android` 在 `android-ndk-r16b` 里.
+
+
+【Android Studio安装部署系列】二十四、Android studio中Gradle插件版本和Gradle版本关系, https://www.cnblogs.com/whycxb/p/9109855.html
+
 
 
 ---
