--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.09](#20190809)
 - [2019.08.08](#20190808)
 - [2019.08.07](#20190807)
 - [2019.08.05](#20190805)
@@ -6,6 +7,84 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.09
+
+介绍 .pbxproj 文件, http://yulingtianxia.com/blog/2016/09/28/Let-s-Talk-About-project-pbxproj/
+
+用脚本来修改Xcode工程, http://blog.wtlucky.com/blog/2016/10/10/use-script-to-modify-xcode-project/
+
+使用代码为 Xcode 工程添加文件, https://draveness.me/bei-xcodeproj-keng-de-zhe-ji-tian
+
+
+<br>
+
+use xcodeproj:
+
+安装 `[sudo] gem install xcodeproj`
+
+ruby 脚本:
+
+```ruby
+require 'xcodeproj'
+
+project_path = File.join(File.dirname(__FILE__), "demo/frameworks/runtime-src/proj.ios_mac/SGameIOS.xcodeproj")
+puts "project_path:", project_path, ""
+
+project = Xcodeproj::Project.open(project_path)
+puts "project: ", project
+
+project.targets.each do |target|
+	puts target.name
+end
+
+puts ""
+puts "project.targets.first:", project.targets.first, ""
+
+# resources_group = project.main_group.find_subpath("Resources", false)
+# resources_group = project["Resources"]
+# puts resources_group=="", resources_group==nil
+# project.new_group("hello_group")
+hello_group = project["hello_group"]
+
+if hello_group != nil
+	# clear group
+	hello_group.clear
+
+	# new reference for folder
+	filePath = "/Users/zs/Desktop/2/test_1/i_am_a_folder"
+	# hello_group.new_reference(filePath)
+
+	# new reference for file
+	filePath = "/Users/zs/Desktop/2/test_1/bg.png"
+	# hello_group.new_reference(filePath)
+end
+
+target = project.targets.first
+
+# puts project.pretty_print
+# puts project.native_targets
+
+# puts target.pretty_print
+# puts target.build_phases
+# puts target.product_name
+# puts target.build_settings("DEVELOPMENT_TEAM")
+
+# XCBuildConfiguration
+puts target.build_configurations[0]
+puts target.build_configurations[0].build_settings["DEVELOPMENT_TEAM"]
+puts target.build_configurations[0].build_settings["PRODUCT_BUNDLE_IDENTIFIER"]
+
+# native_target = project.native_targets.first
+# puts native_target.source_build_phase
+# puts native_target.build_settings("DEVELOPMENT_TEAM")
+
+# save file
+# project.save
+
+```
 
 ---
 
