--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,5 +1,6 @@
 
 - [2019.08.09](#20190809)
+- [2019.08.09](#20190809-1)
 - [2019.08.08](#20190808)
 - [2019.08.07](#20190807)
 - [2019.08.05](#20190805)
@@ -12,25 +13,39 @@
 
 ## 2019.08.09
 
+ruby 命令行传参:
+
+```ruby
+p ARGV.class
+p ARGV.size
+p ARGV
+```
+
+---
+
+## 2019.08.09
+
 介绍 .pbxproj 文件, http://yulingtianxia.com/blog/2016/09/28/Let-s-Talk-About-project-pbxproj/
 
 用脚本来修改Xcode工程, http://blog.wtlucky.com/blog/2016/10/10/use-script-to-modify-xcode-project/
 
 使用代码为 Xcode 工程添加文件, https://draveness.me/bei-xcodeproj-keng-de-zhe-ji-tian
 
+xcodeproj github, https://github.com/cocoapods/xcodeproj/
 
 <br>
 
-use xcodeproj:
+use xcodeproj, 修改 project.pbxproj, info.plist:
 
 安装 `[sudo] gem install xcodeproj`
 
 ruby 脚本:
 
 ```ruby
+# modify_xcodeproj.rb:
 require 'xcodeproj'
 
-project_path = File.join(File.dirname(__FILE__), "demo/frameworks/runtime-src/proj.ios_mac/SGameIOS.xcodeproj")
+project_path = File.join(File.dirname(__FILE__), "fire001/frameworks/runtime-src/proj.ios_mac/fire001.xcodeproj")
 puts "project_path:", project_path, ""
 
 project = Xcodeproj::Project.open(project_path)
@@ -75,6 +90,8 @@ target = project.targets.first
 # XCBuildConfiguration
 puts target.build_configurations[0]
 puts target.build_configurations[0].build_settings["DEVELOPMENT_TEAM"]
+
+target.build_configurations[0].build_settings["PRODUCT_BUNDLE_IDENTIFIER"] = "com.bcd.efg"
 puts target.build_configurations[0].build_settings["PRODUCT_BUNDLE_IDENTIFIER"]
 
 # native_target = project.native_targets.first
@@ -84,7 +101,24 @@ puts target.build_configurations[0].build_settings["PRODUCT_BUNDLE_IDENTIFIER"]
 # save file
 # project.save
 
+# ========================================================
+# modify info.plist
+# info_plist = Xcodeproj::Plist.read_from_path(File.join(File.dirname(__FILE__), "fire001/frameworks/runtime-src/proj.ios_mac/ios/info.plist"))
+# puts info_plist["CFBundleDisplayName"]
+# info_plist["CFBundleDisplayName"] = "喔是 display name"
+# Xcodeproj::Plist.write_to_path(info_plist, File.join(File.dirname(__FILE__), "new_info.plist"))
+# puts info_plist
+# ========================================================
+
 ```
+
+info.plist:
+
+CFBundleDisplayName: `${PRODUCT_NAME}`, 包名
+
+CFBundleIdentifier: `$(PRODUCT_BUNDLE_IDENTIFIER)`, bundle id
+
+PROVISIONING_PROFILE_SPECIFIER
 
 ---
 
