--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,6 +1,6 @@
 
+- [2019.08.10](#20190810)
 - [2019.08.09](#20190809)
-- [2019.08.09](#20190809-1)
 - [2019.08.08](#20190808)
 - [2019.08.07](#20190807)
 - [2019.08.05](#20190805)
@@ -11,7 +11,7 @@
 
 ---
 
-## 2019.08.09
+## 2019.08.10
 
 ruby 命令行传参:
 
@@ -20,6 +20,52 @@ p ARGV.class
 p ARGV.size
 p ARGV
 ```
+
+ruby 循环:
+
+```ruby
+# 0,1,2,3,4,5, 包括最后一个 5
+for i in 0..5
+	p i
+end
+
+# 0,1,2,3,4, 不包括最后一个 5
+for i in 0...5
+	p i
+end
+
+# 字符串使用变量的值
+for i in 0...ARGV.size
+	p "#{i}, #{ARGV[i]}"
+end
+```
+
+ruby 多行字符串, 匹配
+
+```ruby
+s = <<-STR
+ABCD
+  ${value}
+  EFGH
+
+I
+ J
+STR
+
+s1 = s.gsub /\${value}/, "123"
+s2 = s.gsub(/(\${value})/) { |match| "456"  }
+
+puts s
+puts ""
+puts s1
+puts ""
+puts s2
+```
+
+mac 里的 zip 命令:
+
+`zip -9 -r -qdgds 100m archive_name file1 file2 ...`
+
 
 ---
 
@@ -58,6 +104,8 @@ end
 puts ""
 puts "project.targets.first:", project.targets.first, ""
 
+target = project.targets.first
+
 # resources_group = project.main_group.find_subpath("Resources", false)
 # resources_group = project["Resources"]
 # puts resources_group=="", resources_group==nil
@@ -70,14 +118,15 @@ if hello_group != nil
 
 	# new reference for folder
 	filePath = "/Users/zs/Desktop/2/test_1/i_am_a_folder"
-	# hello_group.new_reference(filePath)
+	# fileReference = hello_group.new_reference(filePath)
+  # target.resources_build_phase.add_file_reference(fileReference)
 
 	# new reference for file
 	filePath = "/Users/zs/Desktop/2/test_1/bg.png"
-	# hello_group.new_reference(filePath)
+  # fileReference = hello_group.new_reference(filePath)
+  # target.resources_build_phase.add_file_reference(fileReference)
 end
 
-target = project.targets.first
 
 # puts project.pretty_print
 # puts project.native_targets
