--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.12](#20190812)
 - [2019.08.10](#20190810)
 - [2019.08.09](#20190809)
 - [2019.08.08](#20190808)
@@ -8,6 +9,33 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.12
+
+进入到执行文件所在目录
+
+fileA:
+
+```bash
+cd `dirname $0`
+```
+
+运行 fileA:
+
+```
+fileA
+```
+
+挑选英文名, http://www.pgbovine.net/choosing-english-name.htm
+
+lua 将 当前时间 转换为 年月日 整数
+
+```lua
+local curTime = tonumber(os.date("%Y%m%d", os.time()))
+```
+
 
 ---
 
