--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -30,7 +30,7 @@ fileA
 
 挑选英文名, http://www.pgbovine.net/choosing-english-name.htm
 
-lua 将 当前时间 转换为 年月日 整数
+lua 将 当前时间 转换为 年月日拼接的整数
 
 ```lua
 local curTime = tonumber(os.date("%Y%m%d", os.time()))
