--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.13](#20190813)
 - [2019.08.12](#20190812)
 - [2019.08.10](#20190810)
 - [2019.08.09](#20190809)
@@ -9,6 +10,23 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.13
+
+python watchdog, 监视文件的变化:
+
+https://pythonhosted.org/watchdog/quickstart.html#quickstart
+
+https://www.tutorialspoint.com/How-to-monitor-Python-files-for-changes
+
+<br>
+
+python 处理 zip 文件:
+
+https://www.datacamp.com/community/tutorials/zip-file
+
 
 ---
 
