--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.15](#20190815)
 - [2019.08.13](#20190813)
 - [2019.08.12](#20190812)
 - [2019.08.10](#20190810)
@@ -10,6 +11,25 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.15
+
+python `dir()`, 返回属性, 方法列表.
+
+拉伸也不会影响视觉效果的背景图.
+
+组件图 + 背景图.
+
+根据宽高比(1.3333), 判断 ipad 设备:
+
+```lua
+local ratio = framesize.width / framesize.height
+if ratio <= 1.34 then
+    -- iPad 768*1024(1536*2048) is 4:3 screen
+end
+```
 
 ---
 
