--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.16](#20190816)
 - [2019.08.15](#20190815)
 - [2019.08.13](#20190813)
 - [2019.08.12](#20190812)
@@ -11,6 +12,29 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.16
+
+守护进程, daemon, 是一种在后台执行的计算机程序. https://zh.wikipedia.org/wiki/%E5%AE%88%E6%8A%A4%E8%BF%9B%E7%A8%8B
+
+python schedule, https://github.com/dbader/schedule
+
+schedule简介, https://zhuanlan.zhihu.com/p/23086148
+
+python任务定时运行库 schedule 模块
+- https://juejin.im/post/5c1054c3518825350d746ed8
+- Queue
+- threading
+
+EVENT SCHEDULING
+- http://code.activestate.com/recipes/496800-event-scheduling-threadingtimer/
+- Thread
+
+最全Pycharm教程, https://blog.csdn.net/u013088062/article/details/50353202
+
+
 
 ---
 
