--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.17](#20190817)
 - [2019.08.16](#20190816)
 - [2019.08.15](#20190815)
 - [2019.08.13](#20190813)
@@ -12,6 +13,54 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.17
+
+```
+使用Pyreverse生成Python代码的UML类图
+
+安装Graphviz，并添加PATH系统变量
+因为Pyreverse工具集成在Pylint里，可通过“pip install pylint”命令安装pyreverse
+“pyreverse -h”获取命令帮助
+参考命令：“pyreverse -ASmy -o png test/”，test为存放代码的目录
+```
+
+threading.local, https://www.liaoxuefeng.com/wiki/897692888725344/923057354442720
+
+python 多进程:
+
+https://www.liaoxuefeng.com/wiki/897692888725344/923056295693632#0
+
+```python
+# windows 下需要这样写:
+from multiprocessing import Process
+
+# 子进程要执行的代码
+def run_proc(name):
+    print('Run child process %s (%s)...' % (name, os.getpid()))
+
+
+if __name__ == '__main__':
+    print('Parent process %s.' % os.getpid())
+    p = Process(target=run_proc, args=("test",))
+    print('Process will start')
+    p.start()
+    p.join()
+    print("Process end")
+```
+
+结果:
+
+```
+Parent process 6548.
+Process will start
+Run child process test (9124)...
+Process end
+```
+
+python pp 模块, https://wiki.jikexueyuan.com/project/python-actual-combat/tutorial-25.html
 
 ---
 
