--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.18](#20190818)
 - [2019.08.17](#20190817)
 - [2019.08.16](#20190816)
 - [2019.08.15](#20190815)
@@ -13,6 +14,17 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.18
+
+python logging
+- https://cuiqingcai.com/6080.html
+- https://blog.csdn.net/python_lqx/article/details/91464990
+- https://www.cnblogs.com/louis-w/p/8567434.html
+
+
 
 ---
 
