--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.19](#20190819)
 - [2019.08.18](#20190818)
 - [2019.08.17](#20190817)
 - [2019.08.16](#20190816)
@@ -18,6 +19,14 @@
 ---
 
 ## 2019.08.19
+
+Cornerstone, mac svn 工具, https://cornerstone.assembla.com/
+
+Mac 键盘快捷键
+- https://support.apple.com/zh-cn/HT201236
+- https://www.jianshu.com/p/b71f8ce0336a
+
+在 finder 中复制路径: `cmd + option + c`
 
 
 
