--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -28,6 +28,23 @@ Mac 键盘快捷键
 
 在 finder 中复制路径: `cmd + option + c`
 
+mac终端快捷键(Terminal shortcuts)
+- https://blog.csdn.net/qq_15015129/article/details/78109050
+
+cpu 数量
+- https://stackoverflow.com/questions/1006289/how-to-find-out-the-number-of-cpus-using-python
+
+
+设置 mac 允许任何来源的app:
+
+```
+sudo spctl --master-disable
+```
+
+关于Xcode “Build Setting”中的Architectures详解
+- http://bengyuejiejie.github.io/blog/2015/03/09/first-blog/
+
+python3 开启 http 服务, `python -m http.server 8000`
 
 
 ---
