--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -47,6 +47,21 @@ sudo spctl --master-disable
 python3 开启 http 服务, `python -m http.server 8000`
 
 
+python 删除文件到回收站:
+
+`pip install Send2Trash`
+
+```python
+from send2trash import send2trash
+send2trash('some_file')
+```
+
+qt 下载地址:
+
+http://download.qt.io/
+
+
+
 ---
 
 ## 2019.08.18
