--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.20](#20190820)
 - [2019.08.19](#20190819)
 - [2019.08.18](#20190818)
 - [2019.08.17](#20190817)
@@ -15,6 +16,19 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.20
+
+pyqt5 鼠标穿透:
+
+```python
+widget.setAttribute(Qt.WA_TransparentForMouseEvents, True)
+```
+
+qt5文档, https://doc.qt.io/qt-5/qwidget.html
+
 
 ---
 
