--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.22](#20190822)
 - [2019.08.20](#20190820)
 - [2019.08.19](#20190819)
 - [2019.08.18](#20190818)
@@ -16,6 +17,31 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.22
+
+删除 runtime 以外的目录:
+
+```python
+[shutil.rmtree(os.path.abspath(x)) for x in os.listdir(".") if x != "runtime" and os.path.isdir(x)]
+```
+
+lambda 执行多个语句:
+
+```python
+# 输出两遍路径
+[(lambda x : exec("print(os.path.abspath(x));print(os.path.abspath(x))"))(x) for x in os.listdir(".")]
+```
+
+脚本工具里的路径需要使用绝对路径.
+
+python 文件所在目录:
+
+```python
+os.path.dirname(os.path.realpath(__file__))
+```
 
 ---
 
