--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.23](#20190823)
 - [2019.08.22](#20190822)
 - [2019.08.20](#20190820)
 - [2019.08.19](#20190819)
@@ -17,6 +18,15 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.23
+
+${buy^{buy}}^{buy}$
+
+使用 vs code 的 tasks 功能组织工作流程. 具体方法是在 task.json 中添加 task.
+
 
 ---
 
