--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.24](#20190824)
 - [2019.08.23](#20190823)
 - [2019.08.22](#20190822)
 - [2019.08.20](#20190820)
@@ -18,6 +19,55 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.24
+
+面板 与 背景分离, 因为背景通常需要适配各种大小的屏幕, 会进行缩放. 而面板通常是固定大小. 
+
+项目需要预览的资源, 都应该能在编辑器里浏览. 
+
+```lua
+  -- 中文名
+  local name_list = {
+      "余洲", "脱贝莉", "仵迎夏", "泥子辰", "叶夏月", "焉煊", "弭绿兰", "长思琳", "司寇依波", "耿绮波", "初晶灵",
+      "莘欣荣", "生从阳", "掌依薇", "冼远", "原惜筠", "刚明煦", "仲暮芸", "崇幼柏", "歧友灵", "蒋康平", "悉问香",
+      "告悟", "齐天玉", "充俊杰", "锺离沛文", "左尔蓝", "板志行", "戚芝宇", "刀乐安", "欧悦爱", "曾碧巧", "母平蓝",
+      "荣和光", "诸霞绮", "董寻梅", "戢嫒", "桥琼岚", "郁升", "中晶瑶", "吉路", "休依霜", "欧阳明煦", "通珠星",
+      "苟夏山", "居茉莉", "翟夏萱", "党新雪", "萨韵", "索安南", "检荷紫", "许锐思", "翠采文", "太史新荣", "肥建明",
+      "敛俊明", "强忆秋", "谢嘉懿", "於语芹", "敏迎", "容清昶", "浮毅然", "爱世敏", "费莫欣笑", "圭晓莉", "栋修伟",
+      "锺萌", "赧高旻", "完天骄", "植乐心", "潭雅爱", "风笑", "磨鸿才", "同淼淼", "勤寅骏", "顿子楠", "剑斯文",
+      "闳流", "封馨香", "司莹洁", "暴桃", "那诗怀", "昔怡和", "杨恨竹", "税霁", "嬴悦心", "飞谷枫", "颜博耘",
+      "衷英华", "符亦玉", "甲含文", "韩佳惠",
+  }
+
+  -- 英文名
+  local name_list_en = {
+      "Noah",	"Emma", "Liam",	"Sophia", "Jacob",	"Olivia", "Mason",	"Isabella", "William",	"Ava",
+      "Ethan",	"Mia", "Michael",	"Abigail", "Alexander",	"Emily", "James",	"Madison",
+      "Elijah",	"Charlotte", "Daniel",	"Elizabeth", "Benjamin",	"Amelia", "Aiden",	"Chloe",
+      "Jayden",	"Ella", "Logan",	"Evelyn", "Matthew",	"Avery", "David",	"Sofia",
+      "Joseph",	"Harper", "Lucas",	"Grace", "Jackson",	"Addison", "Anthony",	"Victoria",
+      "Joshua",	"Natalie", "Samuel",	"Lily", "Andrew",	"Aubrey", "Gabriel",	"Lillian",
+      "Christopher",	"Zoey", "John",	"Hannah", "Dylan",	"Layla", "Carter",	"Brooklyn",
+      "Isaac",	"Samantha", "Ryan",	"Zoe", "Luke",	"Leah",  
+  }
+
+  -- Japanese name
+  local name_list_jp = {
+    "绀野美纱子", "赤木春恵", "亜希いずみ", "亜希子", "秋山莉奈",
+    "秋吉久美子", "朝冈実岭", "浅川稚広", "浅茅阳子", "浅田美代子",
+    "浅野温子", "浅野ゆう子", "安座间美优", "东ちづる", "东てる美",
+    "麻生久美子", "麻生佑未", "浅见れいな", "浅利香津代", "あじゃ",
+    "安达佑実", "安倍麻美", "安倍なつみ", "天海佑希", "绫瀬はるか",
+    "新井晴み", "草笛光子", "工藤里纱", "国仲凉子", "蛯原友里",
+    "絵门ゆう子", "远藤久美子", "扇千景", "大方斐纱子", "安田道代",
+    "大河内奈々子", "大后寿々花", "大沢逸美", "安良城红", "有森也実",
+    "淡路恵子", "岩佐真悠子", "岩田さゆり", "岩下志麻", "上戸彩",
+    "上野树里", "上原さくら", "上原多香子",
+  }
+```
 
 ---
 
