--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.27](#20190827)
 - [2019.08.24](#20190824)
 - [2019.08.23](#20190823)
 - [2019.08.22](#20190822)
@@ -22,11 +23,27 @@
 
 ---
 
+## 2019.08.27
+
+需要替换的资源是什么?
+
+- 含义相同的资源
+- 可能是同名资源
+
+替换资源工具:
+
+- 列出所有资源
+- 创建新资源的副本到临时目录(复制, 重命名)
+- 备份旧资源
+- 合并新旧资源
+
+---
+
 ## 2019.08.24
 
-面板 与 背景分离, 因为背景通常需要适配各种大小的屏幕, 会进行缩放. 而面板通常是固定大小. 
+面板 与 背景分离, 因为背景通常需要适配各种大小的屏幕, 会进行缩放. 而面板通常是固定大小.
 
-项目需要预览的资源, 都应该能在编辑器里浏览. 
+项目需要预览的资源, 都应该能在编辑器里浏览.
 
 ```lua
   -- 中文名
@@ -51,7 +68,7 @@
       "Joseph",	"Harper", "Lucas",	"Grace", "Jackson",	"Addison", "Anthony",	"Victoria",
       "Joshua",	"Natalie", "Samuel",	"Lily", "Andrew",	"Aubrey", "Gabriel",	"Lillian",
       "Christopher",	"Zoey", "John",	"Hannah", "Dylan",	"Layla", "Carter",	"Brooklyn",
-      "Isaac",	"Samantha", "Ryan",	"Zoe", "Luke",	"Leah",  
+      "Isaac",	"Samantha", "Ryan",	"Zoe", "Luke",	"Leah",
   }
 
   -- Japanese name
