--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.28](#20190828)
 - [2019.08.27](#20190827)
 - [2019.08.24](#20190824)
 - [2019.08.23](#20190823)
@@ -20,6 +21,52 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+
+---
+
+## 2019.08.28
+
+windows 10 开启ssh:
+
+`windows 任务管理器 => 服务 => sshd`
+
+
+```python
+# 对象的类型
+object.__class__
+
+# 对象字典
+object.__dict__
+```
+
+用paramiko实现Python内的ssh功能, http://www.liujiangblog.com/blog/15/
+
+
+远程桌面协议:
+
+Remote Desktop Protocol (RDP)
+
+psexec
+
+pypsexec
+
+替换资源工具的配置结构:
+
+- project_name
+  - project_path
+  - res
+    - file_name 1
+      - file_path
+      - replace_file_path
+    - file_name 2
+      - file_path
+      - replace_file_path
+    - file_name 3
+      - file_path
+      - replace_file_path
+    - ...
+
 
 ---
 
