--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.29](#20190829)
 - [2019.08.28](#20190828)
 - [2019.08.27](#20190827)
 - [2019.08.24](#20190824)
@@ -22,6 +23,26 @@
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
 
+---
+
+## 2019.08.29
+
+python 遍历列表, 返回索引和值:
+
+```python
+for i, v in enumerate([10,20,30,40,50]):
+  print(i,v)
+```
+
+python 判断list的索引是否存在
+
+```python
+a = [22]
+try:
+  print(a[0])
+except IndexError:
+  print("IndexError")
+```
 
 ---
 
@@ -53,16 +74,20 @@ pypsexec
 
 替换资源工具的配置结构:
 
-- project_name
+- root [object]
+  - version
   - project_path
-  - res
-    - file_name 1
+  - res [list]
+    - [object]
+      - file_name 1
       - file_path
       - replace_file_path
-    - file_name 2
+    - [object]
+      - file_name 2
       - file_path
       - replace_file_path
-    - file_name 3
+    - [object]
+      - file_name 3
       - file_path
       - replace_file_path
     - ...
