replace res tool

--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -44,6 +44,14 @@ except IndexError:
   print("IndexError")
 ```
 
+python 遍历字典:
+
+```python
+a = {"name": "plmnko"}
+for k, v in a.items():
+    print(k, v)
+```
+
 ---
 
 ## 2019.08.28
