--- a/trick/note-2019.08.md
+++ b/trick/note-2019.08.md
@@ -1,4 +1,5 @@
 
+- [2019.08.30](#20190830)
 - [2019.08.29](#20190829)
 - [2019.08.28](#20190828)
 - [2019.08.27](#20190827)
@@ -22,6 +23,12 @@
 - [2019.08.03](#20190803)
 - [2019.08.02](#20190802)
 - [2019.08.01](#20190801)
+
+---
+
+## 2019.08.30
+
+mac terminal 上运行 app: `open xxx.app`
 
 ---
 
