--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,6 +1,77 @@
 
+- [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+
+---
+
+## 2019.09.04
+
+http://www.jacquesf.com/2011/04/mac-os-x-dhcp-server/
+
+https://apple.stackovernet.com/cn/q/49684
+
+Q:
+
+`Router <-- USB ethernet --> MAC_GW <-- ethernet --> switch <-> internal network`
+
+A:
+
+```
+OS X Yosemite doesn’t have support for natd binary or ipfw anymore. Instead pfctl is used.
+
+I assume the following IP-adresses/netmasks:
+
+Router: 192.168.0.1/24
+Mac mini gateway: en0: 192.168.0.2/24 gateway 192.168.0.1 en1: 192.168.1.2/24
+Internal network: 192.168.1.0/24
+
+1. First you have to enable forwarding on your Mac computer with following commands:
+
+sudo sysctl -w net.inet.ip.forwarding=1
+
+2. In order to do NAT you have to create a pfctl rule. Create a file called "nat-rules" with the following content:
+
+nat on en0 from en1 to any -> (en0)
+
+3. Save the file and now start pfctl using the rule from the file we have created earlier:
+
+sudo pfctl -d #disables pfctl
+sudo pfctl -F all #flushes all pfctl rules
+sudo pfctl -f /Path/to/file/nat-rules -e #starts pfctl and loads the rules from the nat-rules file
+
+4. Now configure a static route on your router:
+
+192.168.1.0/24 (the internal network) -> 192.168.0.2 (Mac mini IP-address of the external interface connected to the router)
+
+5. Enable the DHCP-service on your Mac mini gateway:
+
+Name: choose a name
+Network Interface: en1
+Starting IP address: 192.168.1.10
+Ending IP address: 192.168.1.100
+Subnet Netmask: 255.255.255.0
+Router: 192.168.1.2
+DNS: some DNS-server (e.g. 8.8.8.8)
+
+6. Now use pfctl to add rules or get a pfctl-GUI like IceFloor or Murus to configure your firewall. Both apps should also allow you to enable NAT (step 2/3)
+```
+
+
+Mac设置同时访问内外网, https://www.jianshu.com/p/a9d458e97c40
+
+```
+netstat -rn    --查看路由表
+route get 0.0.0.0 --获取默认路由
+sudo route delete 0.0.0.0    --删除默认路由
+sudo route add -net 0.0.0.0 192.168.1.1    --添加外网网关
+sudo route add -net 134.0.0.0  134.81.5.254    --添加内网网关（注意这里ip地址是自己要访问内网的ip地址，如果只访问某一台，可以将134.0.0.0改成固定的IP，例如134.81.5.228）
+```
+
+Mac High Sierra 配置永久静态路由, https://blog.csdn.net/zh778/article/details/79401106
+- networksetup 命令
+
 
 ---
 
