--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -79,12 +79,65 @@ networksetup -listallnetworkservices
 networksetip -setadditionalroutes "Ethernet 2" 192.168.43.0 255.255.255.0 192.168.8.63
 
 清空已配置的路由
-networksetip -setadditionalroutes "Ethernet 2" 
+networksetip -setadditionalroutes "Ethernet 2"
 ```
 
 `sysctl`
 
 `pfctl`, 配置转发
+
+socat, https://www.hi-linux.com/posts/61543.html
+
+
+frp, https://github.com/fatedier/frp/blob/master/README_zh.md
+- 一个内网穿透工具
+
+frp 服务端配置, frps.ini:
+
+```
+[common]
+bind_port = 7000
+
+```
+
+frp 客户端配置, frpc.ini:
+
+```
+[common]
+server_addr = 192.168.43.245
+server_port = 7000
+
+[test_echo]
+type = tcp
+local_ip = 192.168.43.245
+local_port = 6001
+remote_port = 9001
+
+[http_proxy]
+type = tcp
+remote_port = 6000
+plugin = http_proxy
+plugin_http_user = abc
+plugin_http_passwd = abc
+```
+
+启动 frp 服务端: `./frps -c ./frps.ini`
+
+启动 frp 客户端: `./frpc -c ./frpc.ini`
+
+
+
+`/data/misc/wifi/hostpad.confg`, ignore_broadcast_ssid=1, 隐藏热点ssid
+- https://blog.csdn.net/xzx208/article/details/79622183
+
+<br>
+
+python list to str:
+
+```python
+list1 = [1, 2, 3]
+str1 = ''.join(str(e) for e in list1)
+```
 
 
 
