--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,7 +1,15 @@
 
+- [2019.09.05](#20190905)
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+
+---
+
+## 2019.09.05
+
+查看当前ip的地区, `curl ip.gs`
 
 
 ---
