--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -11,6 +11,20 @@
 
 查看当前ip的地区, `curl ip.gs`
 
+WFilter(超级嗅探狗)局域网监控软件是为企业量身定做的信息监控系统.
+
+pfctl 说明, https://www.freebsdchina.org/forum/topic_24641.html
+
+网页版 NS2 实验平台的搭建, https://github.com/rocky-nupt/ns_web
+
+NS3教程, https://blog.csdn.net/loloha007/article/details/8256090
+
+https://www.computerhope.com/
+
+android 路由
+- https://www.cnblogs.com/simonshi/archive/2011/05/31/2065011.html
+- https://blog.csdn.net/zhuxiaoping54532/article/details/51526304
+
 
 ---
 
