--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,8 +1,47 @@
 
+- [2019.09.06](#20190906)
 - [2019.09.05](#20190905)
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.06
+
+安装 pip
+
+```
+curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+sudo python get-pip.py
+```
+
+安装 shadowsocks
+
+`pip install shadowsocks`
+
+shadowsocks 配置文件
+
+```
+cat /etc/shadowsocks.json
+ 
+{
+	"server": "192.168.43.252",
+	"server_port": 9630,
+	"local_port": 1080,
+	"password": "fire",
+	"timeout": 600,
+	"method": "aes-256-cfb"
+}
+```
+
+启动 shadowsocks 
+
+`sudo ssserver -c /etc/shadowsocks.json -d start`
+
+关闭 shadowsocks 
+
+`sudo ssserver -d stop`
 
 
 ---
