--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -43,6 +43,18 @@ cat /etc/shadowsocks.json
 
 `sudo ssserver -d stop`
 
+独立于游戏逻辑的常用功能模块:
+
+- 对话框
+- 签到
+- 排行榜
+- 信息展示
+- 修改密码
+- 设置
+- 帮助
+- 邮件
+- 商城
+- 抽奖功能
 
 ---
 
