--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -24,7 +24,7 @@ shadowsocks 配置文件
 
 ```
 cat /etc/shadowsocks.json
- 
+
 {
 	"server": "192.168.43.252",
 	"server_port": 9630,
@@ -35,11 +35,11 @@ cat /etc/shadowsocks.json
 }
 ```
 
-启动 shadowsocks 
+启动 shadowsocks
 
 `sudo ssserver -c /etc/shadowsocks.json -d start`
 
-关闭 shadowsocks 
+关闭 shadowsocks
 
 `sudo ssserver -d stop`
 
@@ -55,6 +55,19 @@ cat /etc/shadowsocks.json
 - 邮件
 - 商城
 - 抽奖功能
+
+android 刷机的两个模式:
+
+关机键 + 音量减小键, 进入 fastboot mode
+
+关机键 + 音量增大键, 进入 recovery mode
+
+Magisk 科普, http://www.oneplusbbs.com/thread-4077732-1-1.html
+
+魔趣rom, https://www.mokeedev.com/
+
+Android 四：区分刷机与root, https://www.cnblogs.com/happyliuyi/p/5166009.html
+
 
 ---
 
