--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,9 +1,67 @@
 
+- [2019.09.07](#20190907)
 - [2019.09.06](#20190906)
 - [2019.09.05](#20190905)
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.07
+
+
+清理 cocos2dx 资源搜索路径: 
+
+```lua
+---
+--- Helper:removeSearchPath("res/game_1/Animate", "res/game_1/Animate/image")
+--- Helper:removeSearchPath(unpack({"res/game_1/Animate", "res/game_1/Animate/image"}))
+---
+function Helper:removeSearchPath(...)
+    local _debug = false
+    local paths = cc.FileUtils:getInstance():getSearchPaths()
+    if _debug then
+        dump(paths)
+    end
+    
+    local new_paths = {}
+    local cache = {}
+    local filter = {}
+    local game_path_to_remove = {...}
+    
+    for _, target in ipairs(game_path_to_remove) do
+        for _, p in ipairs(paths) do
+            local start_index, end_index = string.find(p, target)
+            if start_index ~= nil then
+                if not filter[p] then
+                    filter[p] = true
+
+                    if _debug then
+                        print("find!", p, start_index, end_index)
+                    end
+                end
+            end
+        end
+    end
+
+    for _, p in ipairs(paths) do
+        if not cache[p] then
+            cache[p] = true
+            if not filter[p] then
+                table.insert(new_paths, p)
+            end
+        end
+    end
+
+    cc.FileUtils:getInstance():setSearchPaths(new_paths)    
+    local paths = cc.FileUtils:getInstance():getSearchPaths()
+    if _debug then
+        print("current search path:")
+        dump(paths)
+    end
+end
+```
 
 ---
 
