--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.08](#20190908)
 - [2019.09.07](#20190907)
 - [2019.09.06](#20190906)
 - [2019.09.05](#20190905)
@@ -8,10 +9,29 @@
 
 ---
 
+## 2019.09.08
+
+数据的形式:
+
+- 程序中的数据结构
+    - 对象, 容器
+    - 数值
+- 序列化
+    - json, xml, ...
+
+程序逻辑操作的是数据.
+
+想到一个点子, 名字叫《假想老师》. 老师关注每个学生的历史状况, 从而作出决策.
+
+描述历史的结构...
+
+
+---
+
 ## 2019.09.07
 
 
-清理 cocos2dx 资源搜索路径: 
+清理 cocos2dx 资源搜索路径:
 
 ```lua
 ---
@@ -24,12 +44,12 @@ function Helper:removeSearchPath(...)
     if _debug then
         dump(paths)
     end
-    
+
     local new_paths = {}
     local cache = {}
     local filter = {}
     local game_path_to_remove = {...}
-    
+
     for _, target in ipairs(game_path_to_remove) do
         for _, p in ipairs(paths) do
             local start_index, end_index = string.find(p, target)
@@ -54,7 +74,7 @@ function Helper:removeSearchPath(...)
         end
     end
 
-    cc.FileUtils:getInstance():setSearchPaths(new_paths)    
+    cc.FileUtils:getInstance():setSearchPaths(new_paths)
     local paths = cc.FileUtils:getInstance():getSearchPaths()
     if _debug then
         print("current search path:")
