--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.09](#20190909)
 - [2019.09.08](#20190908)
 - [2019.09.07](#20190907)
 - [2019.09.06](#20190906)
@@ -6,6 +7,16 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.09
+
+刚开始使用一种框架, 减少对API提示功能的依赖, 使用编辑器进行编码, 这样可以加深对API的记忆, 提升敲代码的速度, 理解编译过程. 
+
+如果是为了提高工作效率, 可以考虑用集成开发环境(IDE). 
+
+由数据结构驱动的程序, 称作 engine, run, core, ... 
 
 ---
 
