--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.10](#20190910)
 - [2019.09.09](#20190909)
 - [2019.09.08](#20190908)
 - [2019.09.07](#20190907)
@@ -7,6 +8,23 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.10
+
+sublime text 3 package control 设置 proxy, 以安装插件. 
+
+`/Users/xxxx/Library/Application Support/Sublime Text 3/Packages/User/Package Control.sublime-settings`:
+
+```
+{
+    "http_proxy": "127.0.0.1:1087",
+}
+```
+
+bridge, 通常用于两种语言之间的通讯. 就像连接两个岛的桥一样, 桥使得两个岛里的人可以互相交流. 
+
 
 ---
 
