--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.11](#20190911)
 - [2019.09.10](#20190910)
 - [2019.09.09](#20190909)
 - [2019.09.08](#20190908)
@@ -8,6 +9,20 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.11
+
+`Paste JSON as Code`, JSON 转 多种语言的结构体的 vs code 插件.
+
+table.sort 的 比较函数 返回 true, 表示 a 应该排在 b 的前面
+
+```lua
+table.sort(values, function(a, b)
+    return a < b
+end)
+```
 
 ---
 
