--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.12](#20190912)
 - [2019.09.11](#20190911)
 - [2019.09.10](#20190910)
 - [2019.09.09](#20190909)
@@ -9,6 +10,35 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.12
+
+
+mac下, 根据提示安装java环境后, 仍然提示未找到 JAVA_HOME, 需要这样操作:
+- "No Java runtime present, requesting install"
+- https://blog.csdn.net/aqiang912/article/details/50463431
+
+修改 `~/.bash_profile` 文件:
+
+```bash
+export JAVA_HOME="/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home"
+export PATH=${JAVA_HOME}/bin:$PATH
+```
+
+生效 .bash_profile:
+
+`source .bash_profile`
+
+验证 java 环境:
+
+```
+$ java -version
+java version "1.8.0_221"
+Java(TM) SE Runtime Environment (build 1.8.0_221-b11)
+Java HotSpot(TM) 64-Bit Server VM (build 25.221-b11, mixed mode)
+```
 
 ---
 
