--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -40,6 +40,70 @@ Java(TM) SE Runtime Environment (build 1.8.0_221-b11)
 Java HotSpot(TM) 64-Bit Server VM (build 25.221-b11, mixed mode)
 ```
 
+<br>
+
+win 10 开启共享失败:
+- 该设备或资源未设置为接受端口"文件和打印机共享(SMB)"上的连接
+- 445端口
+- 用机器名访问时报80070035错误，用IP访问时报80004005错误
+- https://www.zhihu.com/question/54050010/answer/495157530
+- https://blog.csdn.net/poolord/article/details/79619202
+
+
+`gpedit.msc`, 本地组策略编辑器
+
+`regedit`, 注册表
+
+```
+有注册表项可以禁用服务端的SMBv1、SMBv2:
+
+Windows Registry Editor Version 5.00
+
+--------------------------------------------------------------------------
+[HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\services\LanmanServer\Parameters]
+"SMB1"=dword:00000000
+"SMB2"=dword:00000000
+--------------------------------------------------------------------------
+
+0表示禁用，1表示启用(缺省值)。
+
+禁用客户端的SMBv1:
+
+sc.exe config lanmanworkstation depend= bowser/mrxsmb20/nsi
+sc.exe config mrxsmb10 start= disabled
+
+启用客户端的SMBv1:
+
+sc.exe config lanmanworkstation depend= bowser/mrxsmb10/mrxsmb20/nsi
+sc.exe config mrxsmb10 start= auto
+
+禁用客户端的SMBv2、SMBv3:
+
+sc.exe config lanmanworkstation depend= bowser/mrxsmb10/nsi
+sc.exe config mrxsmb20 start= disabled
+
+启用客户端的SMBv2、SMBv3:
+
+sc.exe config lanmanworkstation depend= bowser/mrxsmb10/mrxsmb20/nsi
+sc.exe config mrxsmb20 start= auto
+
+更多细节参看:
+
+How to enable and disable SMBv1, SMBv2, and SMBv3 in Windows and Windows Server
+https://support.microsoft.com/en-us/help/2696547/how-to-enable-and-disable-smbv1-smbv2-and-smbv3-in-windows-and-windows-server
+```
+
+本次解决方案:
+
+- 关闭防火墙
+- 运行 `gpedit.msc`, 查看IP策略的配置是否有禁止445端口, 如果有, 则取消掉:
+
+![IP安全策略, 在 本地计算机](res/20190912_01.png)
+
+
+
+<br>
+
 ---
 
 ## 2019.09.11
