--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -104,6 +104,20 @@ https://support.microsoft.com/en-us/help/2696547/how-to-enable-and-disable-smbv1
 
 <br>
 
+装饰器是函数(wrapper), 它的参数是函数.
+
+partial function, 偏函数, 函数的 部分参数 被预先设定好的 新函数. 
+
+```python
+import functools
+
+def func(a,b):
+    return a * 10 + b
+
+new_func = functools.partial(func, a = 9)
+print(new_func(b=9))  # 99
+```
+
 ---
 
 ## 2019.09.11
