--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.13](#20190913)
 - [2019.09.12](#20190912)
 - [2019.09.11](#20190911)
 - [2019.09.10](#20190910)
@@ -10,6 +11,16 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.13
+
+interactive lua:
+-- http://lua-users.org/wiki/InteractiveLua
+-- 一个 lua 交互环境
+
+
 
 ---
 
@@ -106,7 +117,7 @@ https://support.microsoft.com/en-us/help/2696547/how-to-enable-and-disable-smbv1
 
 装饰器是函数(wrapper), 它的参数是函数.
 
-partial function, 偏函数, 函数的 部分参数 被预先设定好的 新函数. 
+partial function, 偏函数, 函数的 部分参数 被预先设定好的 新函数.
 
 ```python
 import functools
@@ -136,7 +147,7 @@ end)
 
 ## 2019.09.10
 
-sublime text 3 package control 设置 proxy, 以安装插件. 
+sublime text 3 package control 设置 proxy, 以安装插件.
 
 `/Users/xxxx/Library/Application Support/Sublime Text 3/Packages/User/Package Control.sublime-settings`:
 
@@ -146,20 +157,20 @@ sublime text 3 package control 设置 proxy, 以安装插件.
 }
 ```
 
-bridge, 通常用于两种语言之间的通讯. 就像连接两个岛的桥一样, 桥使得两个岛里的人可以互相交流. 
+bridge, 通常用于两种语言之间的通讯. 就像连接两个岛的桥一样, 桥使得两个岛里的人可以互相交流.
 
 
 ---
 
 ## 2019.09.09
 
-刚开始使用一种框架, 减少对API提示功能的依赖, 使用编辑器进行编码, 这样可以加深对API的记忆, 提升敲代码的速度, 理解编译过程. 
+刚开始使用一种框架, 减少对API提示功能的依赖, 使用编辑器进行编码, 这样可以加深对API的记忆, 提升敲代码的速度, 理解编译过程.
 
-如果是为了提高工作效率, 可以考虑用集成开发环境(IDE). 
+如果是为了提高工作效率, 可以考虑用集成开发环境(IDE).
 
-由数据结构驱动的程序, 称作 engine, run, core, ... 
+由数据结构驱动的程序, 称作 engine, run, core, ...
 
-类似新手引导的功能, 有点像交互模式. 
+类似新手引导的功能, 有点像交互模式.
 
 ---
 
