--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -17,8 +17,25 @@
 ## 2019.09.13
 
 interactive lua:
--- http://lua-users.org/wiki/InteractiveLua
--- 一个 lua 交互环境
+- http://lua-users.org/wiki/InteractiveLua
+- 一个 lua 交互环境
+
+
+
+Q: `git pull` 报错
+
+> LibreSSL SSL_connect: SSL_ERROR_SYSCALL in connection to github.com:443
+
+A: git 需要设置 shadowsocks 代理
+
+```bash
+git config --global http.proxy "socks5://127.0.0.1:1086"
+git config --global https.proxy "socks5://127.0.0.1:1086"
+```
+
+mac远程桌面(局域网):
+
+在一台 mac 的设置 -> 共享 -> 屏幕共享 后, 可以在另一台mac里使用 屏幕共享.app 连接. 
 
 
 
