--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -35,8 +35,12 @@ git config --global https.proxy "socks5://127.0.0.1:1086"
 
 mac远程桌面(局域网):
 
-在一台 mac 的设置 -> 共享 -> 屏幕共享 后, 可以在另一台mac里使用 屏幕共享.app 连接. 
+在一台 mac 的设置 -> 共享 -> 屏幕共享 后, 可以在另一台mac里使用 屏幕共享.app 连接.
 
+lisp 资料:
+- ansi common lisp, https://acl.readthedocs.io/en/latest/zhCN/index.html
+- Practical Common Lisp,  http://www.gigamonkeys.com/book/
+- https://common-lisp.net/downloads
 
 
 ---
