--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.14](#20190914)
 - [2019.09.13](#20190913)
 - [2019.09.12](#20190912)
 - [2019.09.11](#20190911)
@@ -11,6 +12,117 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.14
+
+`format` 是 lisp 的输出函数, `t` 表示默认输出的位置, `~a` 表示变量输出的位置, `~%` 表示换行.
+
+```lisp
+; sbcl --script a.lisp
+(defun x () 10)
+(format t "~a~%" (x))
+```
+
+lisp 的引用: `'`(单引号) / `quote` 函数. 引用后面的表达式, 不对它求值. 可以理解为转义
+
+lisp 的数据类型: 符号(symbol), 列表(list), 字符串(string), 整数(integer), ...
+
+> lisp的程序是用列表来表示的.
+
+lisp空列表`()` 显示为 `nil`
+
+lisp创建列表的函数: `list`, `cons`
+
+`car` 函数, 返回列表的第一个元素.
+
+`cdr` 函数, 返回一个列表, 它由列表第一个元素之后的所有元素组成. 如果列表只有一个元素, 则返回`nil`.
+
+`first` 函数, 返回第一个元素. 相似的函数: `second`, `third`, `fourth`, ...
+
+`listp` 函数, 判断参数是否为列表. 返回 `t` 表示 true(逻辑真), 返回 `nil` 表示 false(逻辑假).
+
+谓词, predicate, 判断真假的函数. 
+
+> 在 Common Lisp 里, 谓词的名字通常以 p 结尾.
+
+`null` / `not` 函数, 判断是否为假
+
+lisp 的 `if 操作符`:
+
+```lisp
+(if (listp '(a b c))
+      (format t "is list") ; then
+      (format t "NOT list") ; else
+) 
+```
+
+> 任何非 nil 的东西，在逻辑的上下文里通通被视为 真 .
+
+`and` , 如果所有的参数计算结果都是真, 则返回最后一个结果. 如果有一个参数为假, 则停止对其他参数的求值并返回假. 
+
+`or` , 如果所有的参数计算结果都是假, 则返回假. 如果有一个参数为真, 则停止计算并返回真. 
+
+`and` 与 `or` 是宏.
+
+`eql`, 判断两个参数是否相等.
+
+`read`, 标准输入函数:
+
+```lisp
+(read)
+```
+
+`let` 引入局部变量, 这些变量在 `let` 的函数体内有效:
+
+```lisp
+(let ((x 1) (y 2) (z 3))
+     (+ x y z))
+```
+
+`numberp`, 判断是否是数值
+
+
+```lisp
+; 定义全局变量:
+(defparameter *g_val* 99)
+
+; 使用:
+*g_val*
+
+; 定义全局常量:
+(defconstant limit "constant___")
+(format t "~a~%" limit)
+
+; setf 赋值:
+(setf xx "09876")
+xx
+
+; 一个列表赋值给 变量x :
+(let ((x '(o p q)))
+	(format t "1:[~a]~%" x)
+	(setf (car x) 'a)  ; 修改第一个元素
+	(format t "2:[~a]~%" x)
+)
+; 1:[(O P Q)]
+; 2:[(A P Q)
+
+; 创建了 a, c, e 三个变量:
+(setf a 'b
+      c 'd
+      e 'f)
+```
+
+
+`boundp`, 判断符号是否是变量:
+
+```lisp
+(boundp 'xx)
+```
+
+> 函数式编程意味着撰写利用返回值而工作的程序，而不是修改东西。它是 Lisp 的主流范式。
+
 
 ---
 
