--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -123,6 +123,45 @@ xx
 
 > 函数式编程意味着撰写利用返回值而工作的程序，而不是修改东西。它是 Lisp 的主流范式。
 
+`do` 迭代:
+
+```lisp
+(defun show-squares (start end)
+  (do ((i start (+ i 1)))
+    ((> i end) 'done)
+    (format t "~A ~A~%" i (* i i))
+  )
+)
+
+(show-squares 1 3)
+; 1 1
+; 2 4
+; 3 9
+; DONE
+
+
+; 输出 1 到 10
+(do ((i 1 (+ i 1)))
+	((> i 10) 'Text_xxx_yyy 'return_value)
+	(format t "~A, " i)
+)
+; 1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
+; RETURN_VALUE
+```
+
+> progn 接受任意数量的表达式，依序求值，并返回最后一个表达式的值。
+
+`dolist`, 遍历列表
+
+```
+(dolist (obj '(1 10 100 1000))
+	(format t "~A|" obj)
+)
+```
+
+`function` / `#'` 操作符, 返回函数的对象.
+
+
 
 ---
 
