--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.15](#20190915)
 - [2019.09.14](#20190914)
 - [2019.09.13](#20190913)
 - [2019.09.12](#20190912)
@@ -12,6 +13,27 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+
+---
+
+## 2019.09.15
+
+lisp 类型`t` 是所有类型的基类.
+
+内置类型:
+
+> fixnum 、 integer 、 rational 、 real 、 number 、 atom 和 t 类型
+
+`typep` 判断类型:
+
+```lisp
+(typep 2 'integer)
+```
+
+`顶层`
+
+
 
 ---
 
@@ -43,7 +65,7 @@ lisp创建列表的函数: `list`, `cons`
 
 `listp` 函数, 判断参数是否为列表. 返回 `t` 表示 true(逻辑真), 返回 `nil` 表示 false(逻辑假).
 
-谓词, predicate, 判断真假的函数. 
+谓词, predicate, 判断真假的函数.
 
 > 在 Common Lisp 里, 谓词的名字通常以 p 结尾.
 
@@ -55,14 +77,14 @@ lisp 的 `if 操作符`:
 (if (listp '(a b c))
       (format t "is list") ; then
       (format t "NOT list") ; else
-) 
+)
 ```
 
 > 任何非 nil 的东西，在逻辑的上下文里通通被视为 真 .
 
-`and` , 如果所有的参数计算结果都是真, 则返回最后一个结果. 如果有一个参数为假, 则停止对其他参数的求值并返回假. 
+`and` , 如果所有的参数计算结果都是真, 则返回最后一个结果. 如果有一个参数为假, 则停止对其他参数的求值并返回假.
 
-`or` , 如果所有的参数计算结果都是假, 则返回假. 如果有一个参数为真, 则停止计算并返回真. 
+`or` , 如果所有的参数计算结果都是假, 则返回假. 如果有一个参数为真, 则停止计算并返回真.
 
 `and` 与 `or` 是宏.
 
