--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -183,6 +183,17 @@ xx
 
 `function` / `#'` 操作符, 返回函数的对象.
 
+`apply`, 需要传入一个函数, 和调用该函数的参数(最后一个参数需要是列表).
+
+```lisp
+(apply #'+ '(1 2 3))
+```
+
+`funcall`, 接受一个参数, 和调用该函数的参数, 不需要组成列表.
+
+```lisp
+(funcall #'+ 1 2 3)
+```
 
 
 ---
