--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.16](#20190916)
 - [2019.09.15](#20190915)
 - [2019.09.14](#20190914)
 - [2019.09.13](#20190913)
@@ -13,6 +14,16 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.16
+
+一个 lisp 教程:
+- https://riptutorial.com/common-lisp/topic/534/getting-started-with-common-lisp
+
+lisp 的输出函数: `print`
+
 
 
 ---
