--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -24,6 +24,74 @@
 
 lisp 的输出函数: `print`
 
+`cons` 的两个参数表示, `car`, `cdr`. (Cons 对象内含有 car 指针和 cdr指针)
+
+> 所有不是 Cons 对象的东西，就是一个原子 (atom)
+
+判断 atom 类型:
+
+```lisp
+(atom nil) ; T
+(atom 'a) ; T
+(atom (list 1 2 3)) ; NIL
+```
+
+`eql`, 判断对象是否相等
+
+`equal`, 判断内容是否相等
+
+`copy-list`, 复制列表
+
+`append`, 串接列表
+
+```lisp
+(append '(a b c) '(10) '(99))
+; (A B C 10 99)
+```
+
+游程编码(run-length encoding), 将相连重复出现的元素合并, 并用数字表示重复次数.
+
+```lisp
+; 返回列表的第一个元素
+(nth 0 '(a b c))
+; A
+
+; 第2个cdr操作
+(nthcdr 2 '(a b c d e f))
+; (C D E F)
+
+; 最后一个 Cons对象
+(last '(1 (a b)))
+; ((A B))
+```
+
+> 函数 first 直到 tenth 可以取得列表对应的元素
+
+映射函数: `mapcar`, `maplist`
+
+将 Cons对象看作二叉树.
+
+```lisp
+; 替换表达式中的 x
+(subst 'y 'x '(and (integerp x) (zerop (mod x 2))))
+; (AND (INTEGERP Y) (ZEROP (MOD Y 2)))
+```
+
+判断递归函数是否有效:
+- 基本用例(base case):确认问题规模为 1 时, 是否有解;
+- 当问题规模为 n 有解时, 确认 n+1 规模是否有解;
+
+```lisp
+; member 返回匹配的元素和它之后的元素组成的列表
+(member 'b '(a b c))
+; (B C)
+
+; 比较函数
+(member '(z) '((a) (z)) :test #'equal) ; ((Z))
+
+; 比较前对每个元素使用函数
+(member 'a '((a b) (c d)) :key #'car) ; ((A B) (C D))
+```
 
 
 ---
