--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -93,6 +93,33 @@ lisp 的输出函数: `print`
 (member 'a '((a b) (c d)) :key #'car) ; ((A B) (C D))
 ```
 
+`oddp`, 判断奇数
+
+`evenp`, 判断偶数
+
+`adjoin`, 不重复添加相同的元素到列表
+
+```lisp
+(adjoin 'b '(a b c))
+
+; 并集
+(union '(a b c) '(c b s))
+
+; 交集
+(intersection '(a b c) '(b b c))
+
+; 差集
+(set-difference '(a b c d e) '(b e))
+```
+
+`push`, `pop`
+
+
+```lisp
+; 点状列表
+(cons 'a 'b) ; (A . B)
+```
+
 
 ---
 
