--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -120,6 +120,12 @@ lisp 的输出函数: `print`
 (cons 'a 'b) ; (A . B)
 ```
 
+<br>
+
+luasocket 资料:
+- https://www.photoneray.com/luasocket/
+- https://blog.csdn.net/h1023417614/article/details/52297408
+
 
 ---
 
