--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.18](#20190918)
 - [2019.09.17](#20190917)
 - [2019.09.16](#20190916)
 - [2019.09.15](#20190915)
@@ -16,6 +17,21 @@
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
 
+---
+
+## 2019.09.18
+
+Flow Editor:
+
+- load `ActType.lua`, get node types and properties
+- load edge types and properties
+- new or read flow file
+- create node by type
+- input node's property
+- move node in flow graph
+- connect nodes with edges
+- edit edge
+- save flow to file
 
 ---
 
