--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.19](#20190919)
 - [2019.09.18](#20190918)
 - [2019.09.17](#20190917)
 - [2019.09.16](#20190916)
@@ -16,6 +17,21 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.19
+
+zero brane 插件:
+- graphics programming, https://github.com/pixeljetstream/zbstudio-graphicscodepack
+
+
+运行程序前, 先从其他库的位置复制文件到开发环境.
+
+```lua
+value and do_sth() -- 当 value 不为 false, nil 时, 执行 do_sth()
+```
+
 
 ---
 
