--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -28,10 +28,14 @@ zero brane 插件:
 
 运行程序前, 先从其他库的位置复制文件到开发环境.
 
+
 ```lua
 value and do_sth() -- 当 value 不为 false, nil 时, 执行 do_sth()
 ```
 
+通用流程:
+- 基本结构: 顺序, 条件, 循环
+- 基本结构的组合
 
 ---
 
