--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -1,4 +1,5 @@
 
+- [2019.09.20](#20190920)
 - [2019.09.19](#20190919)
 - [2019.09.18](#20190918)
 - [2019.09.17](#20190917)
@@ -17,6 +18,21 @@
 - [2019.09.04](#20190904)
 - [2019.09.03](#20190903)
 - [2019.09.02](#20190902)
+
+---
+
+## 2019.09.20
+
+lua `setfenv` 用法( lua 5.2 弃用 ):
+
+```lua
+print("1111")
+local p = { _G = _G, v1 = "a|b|c" }
+local p_mt = {}
+setmetatable(p, p_mt) -- setmetatable(p, {__index = _G})
+setfenv(1, p)
+_G.print("0000", v1)
+```
 
 ---
 
