--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -32,7 +32,28 @@ local p_mt = {}
 setmetatable(p, p_mt) -- setmetatable(p, {__index = _G})
 setfenv(1, p)
 _G.print("0000", v1)
+
+-- output:
+-- 1111
+-- 0000	a|b|c
 ```
+
+`string.gmatch`:
+
+```lua
+local v = "a.b.c.d"
+for w, d in string.gmatch(v, "([%a_][%w_]*)(%.?)") do
+  print(w, d)
+end
+--output:
+--a	.
+--b	.
+--c	.
+--d
+```
+
+upvalue, 函数外部定义的局部变量(external local variable).
+
 
 ---
 
