--- a/trick/note-2019.09.md
+++ b/trick/note-2019.09.md
@@ -38,6 +38,21 @@ _G.print("0000", v1)
 -- 0000	a|b|c
 ```
 
+`_ENV` 变量:
+
+```lua
+-- lua 5.3
+a = 90
+
+_ENV_ = {
+  a = 10,
+  b = 0,
+}
+setmetatable(_ENV_, {__index = _G})
+_ENV = _ENV_
+print(a, b, _G.a) -- 10  0  90
+```
+
 `string.gmatch`:
 
 ```lua
